--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,15 @@
 <html>
-	<head>
-		<title>Phaser3 + Parceljs Template</title>
-	</head>
-	<body>
-		<script src="main.ts"></script>
-	</body>
+  <head>
+    <title>Phaser3 + Parceljs Template</title>
+  </head>
+
+  <style>
+    body {
+      padding: 0;
+      margin: 0;
+    }
+  </style>
+  <body>
+    <script src="main.ts"></script>
+  </body>
 </html>
